--- a/TTNote/app/src/main/res/menu/navigation.xml
+++ b/TTNote/app/src/main/res/menu/navigation.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item
-            android:id="@+id/navigation_calender"
-            android:icon="@drawable/ic_calender"
-            android:title="Date"/>
+<!--        <item-->
+<!--            android:id="@+id/navigation_calender"-->
+<!--            android:icon="@drawable/ic_calender"-->
+<!--            android:title="Date"/>-->
 
-        <item
-            android:id="@+id/navigation_time"
-            android:icon="@drawable/ic_clock"
-            android:title="Time"/>
+<!--        <item-->
+<!--            android:id="@+id/navigation_time"-->
+<!--            android:icon="@drawable/ic_clock"-->
+<!--            android:title="Time"/>-->
 
         <item
             android:id="@+id/navigation_color"
