--- a/TTNote/app/src/main/res/layout/list_task_row.xml
+++ b/TTNote/app/src/main/res/layout/list_task_row.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingHorizontal="5dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp">
     <ImageButton
         android:id="@+id/btn_clear_task"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:src="@drawable/ic_clear"
         android:background="@color/transparent"/>
     <EditText
@@ -14,5 +17,10 @@
         android:layout_height="wrap_content"
         android:background="@color/transparent"
         android:layout_marginLeft="10dp"
-        android:hint="Task 1"/>
+        android:hint="Task 1"
+        android:layout_weight="0.7"/>
+    <CheckBox
+        android:id="@+id/cb_task_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
