add remind function to show notification

--- a/TTNote/app/src/main/res/menu/activity_main_drawer.xml
+++ b/TTNote/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@ tools:showIn="navigation_view">
         android:icon="@drawable/ic_mission"
         android:title="@string/menu_task" />
     <item
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_remind"
         android:icon="@drawable/ic_remind"
         android:title="@string/menu_remind" />
     <item
