--- a/TTNote/app/src/main/res/layout/fragment_task.xml
+++ b/TTNote/app/src/main/res/layout/fragment_task.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_task_list"
+        android:id="@+id/rv_task_note_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
