--- a/TTNote/app/src/main/res/values/colors.xml
+++ b/TTNote/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#0099e6</color>
+    <color name="colorPrimaryDark">#005580</color>
     <color name="colorAccent">#00aaff</color>
     <color name="transparent">#00000000</color>
     <color name="darkGrey">#737373</color>
