--- a/TTNote/app/src/main/res/layout/activity_remind_note_addition.xml
+++ b/TTNote/app/src/main/res/layout/activity_remind_note_addition.xml
@@ -5,70 +5,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RemindNoteAdditionActivity">
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:theme="@style/AppTheme"/>
-    <ScrollView
+        android:theme="@style/AppTheme" />
+
+    <LinearLayout
         android:id="@+id/ll_card_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/nav_bottom"
         android:layout_below="@id/tool_bar"
-        android:layout_above="@id/nav_bottom">
-        <LinearLayout
+        android:background="@color/white"
+        android:orientation="vertical"
+        android:padding="10dp">
+        <EditText
+            android:id="@+id/edt_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@drawable/card_input_border">
-                <EditText
-                    android:id="@+id/edt_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/transparent"
-                    android:hint="Title"
-                    android:textStyle="bold"
-                    android:autofillHints="Title"
-                    android:inputType="text"
-                    android:padding="10dp"
-                    android:focusedByDefault="false"/>
-                <EditText
-                    android:id="@+id/edt_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:lines="20"
-                    android:gravity="top"
-                    android:background="@color/transparent"
-                    android:hint="Content"
-                    android:autofillHints="Content"
-                    android:inputType="textMultiLine"
-                    android:padding="10dp"
-                    android:focusedByDefault="false"/>
-            </LinearLayout>
+            android:autofillHints="Title"
+            android:background="@color/transparent"
+            android:focusedByDefault="false"
+            android:hint="Title"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textStyle="bold" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_add"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/card_view_border"
-                android:text="ADD"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Button" />
-        </LinearLayout>
-    </ScrollView>
+        <EditText
+            android:id="@+id/edt_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="Content"
+            android:background="@color/transparent"
+            android:focusedByDefault="false"
+            android:gravity="top"
+            android:hint="Content"
+            android:inputType="textMultiLine"
+            android:lines="20"
+            android:padding="10dp" />
+    </LinearLayout>
+
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:layout_alignParentBottom="true"
+        android:background="@color/white"
         app:menu="@menu/navigation_full" />
 </RelativeLayout>
