--- a/TTNote/app/src/main/res/layout/list_row.xml
+++ b/TTNote/app/src/main/res/layout/list_row.xml
@@ -1,33 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/ll_card"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:clickable="true"
         android:layout_marginVertical="10dp"
-        android:orientation="vertical"
-        android:background="@drawable/card_view_border"
-        android:clickable="true">
-        <TextView
-            android:id="@+id/tv_title"
+        app:cardCornerRadius="10dp"
+        app:strokeColor="#cccccc"
+        app:strokeWidth="0.5dp"
+        app:cardElevation="0dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="content"
-            />
-        <View style="@style/Divider"/>
-        <TextView
-            android:id="@+id/tv_created_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/small_text_size"
-            android:text="Ngày tạo: 23/11/2019"/>
-    </LinearLayout>
+            android:layout_marginVertical="10dp"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="content" />
+
+            <View style="@style/Divider" />
+
+            <TextView
+                android:id="@+id/tv_created_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ngày tạo: 23/11/2019"
+                android:textSize="@dimen/small_text_size" />
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
