--- a/TTNote/app/src/main/res/layout/fragment_note.xml
+++ b/TTNote/app/src/main/res/layout/fragment_note.xml
@@ -8,7 +8,15 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_note_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/cl_container_snackbar"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_above="@id/btn_add"
+        android:orientation="vertical">
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_add"
         android:layout_width="wrap_content"
@@ -16,6 +24,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_plus_32"
+        android:src="@drawable/ic_plus_48"
+        app:maxImageSize="35dp"
         app:elevation="0dp"/>
 </RelativeLayout>
