--- a/TTNote/app/src/main/res/layout/list_row.xml
+++ b/TTNote/app/src/main/res/layout/list_row.xml
@@ -27,6 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Title"
+                android:textColor="@color/black_de"
                 android:textStyle="bold" />
 
             <TextView
