--- a/TTNote/app/src/main/res/values/colors_array.xml
+++ b/TTNote/app/src/main/res/values/colors_array.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0099e6</color>
-    <color name="colorPrimaryDark">#005580</color>
-    <color name="colorAccent">#00aaff</color>
-    <color name="transparent">#00000000</color>
-    <color name="darkGrey">#404040</color>
-    <color name="white">#ffffff</color>
-    <array name="colors_palette">
+    <string-array name="colors">
         <item>#ffff80</item>
         <item>#ffbf80</item>
         <item>#ff8080</item>
@@ -19,5 +13,5 @@
         <item>#dfff80</item>
         <item>#bd8e8e</item>
         <item>#ffffff</item>
-    </array>
+    </string-array>
 </resources>
