--- a/TTNote/app/src/main/res/layout/list_task_row.xml
+++ b/TTNote/app/src/main/res/layout/list_task_row.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:background="@color/transparent"
         android:layout_marginLeft="10dp"
-        android:hint="Task 1"
+        android:hint="Task"
         android:layout_weight="0.7"/>
     <CheckBox
         android:id="@+id/cb_task_check"
