--- a/TTNote/app/src/main/res/menu/activity_main_drawer.xml
+++ b/TTNote/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,7 +31,8 @@ tools:showIn="navigation_view">
         <item
             android:id="@+id/nav_send"
             android:icon="@drawable/ic_help"
-            android:title="@string/menu_help" />
+            android:title="@string/menu_help"
+            android:onClick="aboutUs"/>
     </menu>
 </item>
 
