--- a/TTNote/app/src/main/res/navigation/mobile_navigation.xml
+++ b/TTNote/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,9 +35,9 @@
         android:label="@string/menu_setting"
         tools:layout="@layout/fragment_setting" />
 
-    <fragment
-        android:id="@+id/nav_send"
-        android:name="com.example.ttnote.ui.send.SendFragment"
-        android:label="@string/menu_help"
-        tools:layout="@layout/fragment_help" />
+<!--    <fragment-->
+<!--        android:id="@+id/nav_send"-->
+<!--        android:name="com.example.ttnote.ui.send.SendFragment"-->
+<!--        android:label="@string/menu_help"-->
+<!--        tools:layout="@layout/fragment_help" />-->
 </navigation>
