--- a/TTNote/app/src/main/res/values/styles.xml
+++ b/TTNote/app/src/main/res/values/styles.xml
@@ -9,6 +9,13 @@
         <item name="colorControlNormal">@color/darkGrey</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="MyAppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlNormal">@color/darkGrey</item>
+    </style>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
