--- a/TTNote/app/src/main/res/navigation/mobile_navigation.xml
+++ b/TTNote/app/src/main/res/navigation/mobile_navigation.xml
@@ -37,7 +37,7 @@
 
 <!--    <fragment-->
 <!--        android:id="@+id/nav_send"-->
-<!--        android:name="com.example.ttnote.ui.send.SendFragment"-->
+<!--        android:name="com.example.ttnote.ui.send.RecycleBinFragmentagment"-->
 <!--        android:label="@string/menu_help"-->
 <!--        tools:layout="@layout/fragment_help" />-->
 </navigation>
